layout issues on search bar

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -94,7 +94,7 @@ footer
       text-decoration: none
 
   .dropdowns
-    position: absolute
+    display: inline-block
     z-index: 500
 
     .fauxselect
@@ -135,9 +135,16 @@ footer
   .searchForm
 
     float: right
+    text-align: right
 
     form
       background: none
+      margin-bottom: 0
+
+    input
+      display: inline-block
+      width: auto
+
 
 .photo
   padding: 0
